--- a/menu.html
+++ b/menu.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <aside class="links">
-      <a href="index1.html">
+      <a href="index.html">
         <img src="homem-ferro.png" alt="Inicio" /><br>
         <div class="legenda">Início</div></a>
       <a href="pedido.html">
