--- a/pedido.html
+++ b/pedido.html
@@ -17,7 +17,7 @@
 </head>
 <body >
     <aside class="links">
-        <a href="index1.html">
+        <a href="index.html">
           <img src="homem-ferro.png" alt="Inicio" /><br>
           <div class="legenda">Início</div></a>
         <a href="menu.html">
